--- a/index.html
+++ b/index.html
@@ -14,14 +14,12 @@
     <!-- Title -->
     <h1>Infinite Scroll</h1>
     <!-- Loader -->
-    <div class="loader" id="loader" hidden>
-        <img src="loader1.svg" alt="Loading">
+    <div class="loader" id="loader">
+        <img src="loader.svg" alt="Loading">
     </div>
     <!-- Image Container -->
     <div class="image-container" id="image-container">
-        <img src="https://images.unsplash.com/photo-1491147334573-44cbb4602074?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1268&q=80" alt="">
-        <img src="https://images.unsplash.com/photo-1491147334573-44cbb4602074?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1268&q=80" alt="">
-        <img src="https://images.unsplash.com/photo-1491147334573-44cbb4602074?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1268&q=80" alt="">
+       
     </div>
     <!-- Script -->
     <script src="script.js"></script>
